Add validation and exception handling for user registration and login